--- a/css/test.css
+++ b/css/test.css
@@ -1,6 +1,9 @@
 body {
     font-family: 'Roboto', sans-serif;
+    /* семейство шрифта, которое будет использоваться для оформления текста содержимого. */
     line-height: 1.5;
+    /* для блочных элементов определяет минимальную высоту строки текста */
+    /* Для остальных строчных элементов line-height задаёт высоту, которая используется для расчёта высоты строки блока */
 }
 
 .header {
@@ -8,14 +11,23 @@ body {
     border-bottom: 1px solid #000;
     padding-bottom: 10px;
     font-size: 20px;
+    /* размер шрифта */
+    align-items: center;
+    /* выравнивает флекс-элементы внутри контейнера в перпендикулярном направлении */
 }
 
 .logo {
     margin-right: 50px;
     text-decoration: none;
+    /* устанавливает внешний вид декоративных линий в тексте */
     color: lightgreen;
+    /* цвет текста */
     background: rebeccapurple;
+    /* цвет блока */
     font-weight: 700;
+    /* устанавливает насыщенность шрифта. Значение указывается в виде чисел от 100 до 900 с шагом 100 или с помощью заданных ключевых слов */
+    padding: 5px 15px;
+    /* устанавливает значение полей вокруг содержимого элемента. Полем называется расстояние от внутреннего края рамки элемента до воображаемого прямоугольника, ограничивающего его содержимое */
 }
 
 ul {
@@ -23,10 +35,11 @@ ul {
     list-style-type: none;
     padding-left: 0;
     margin: 0;
+    /* устанавливает величину отступа от каждого края элемента. Отступом является пространство от границы текущего элемента до внутренней границы его родительского элемента */
 }
 
 ul>li {
-    margin-right: 10px;
+    margin-right: 30px;
 }
 
 .box {
@@ -37,8 +50,9 @@ ul>li {
 }
 
 .aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+
+    background: lavender;
+    padding: 10px 20px;
 }
 
 .post {
@@ -47,6 +61,7 @@ ul>li {
 
 footer p {
     font-size: 13px;
+    padding: 0px 30px 0px 30px;
 }
 
 a {
@@ -57,7 +72,9 @@ a {
 
 h1 {
     text-transform: uppercase;
+    /* управляет преобразованием текста элемента в заглавные или прописные символы */
     letter-spacing: 0.5px;
+    /* определяет интервал между символами в пределах элемента. Допустимо использовать отрицательное значение, но в этом случае надо убедиться, что сохраняется читабельность текста */
 }
 
 h2 {
@@ -68,4 +85,10 @@ h2 {
 h3 {
     text-transform: uppercase;
     letter-spacing: 0.5px;
+}
+
+section {
+    background: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
 }
