Give name for classes and add styles

--- a/css/test.css
+++ b/css/test.css
@@ -92,3 +92,15 @@ section {
     padding: 5px 20px;
     margin-bottom: 20px;
 }
+
+.link {
+    background: rebeccapurple;
+    color: #FFFFFF;
+    padding: 8px 15px 8px 15px;
+    margin-left: 10px;
+}
+
+ul>li:last-child {
+    margin-right: 0;
+    background: rosybrown;
+}
